[project]
name = "pam"
version = "0.1.0"
description = "Asset manager for Photographers or digital artists"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "passlib>=1.7.4",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.24",
    "uuid>=1.30",
]
